MDEV-32351 Significant slowdown for query with many outer joins

This is a preliminary patch. To be used just for testing.